--- a/Client/ClientWindow.fxml
+++ b/Client/ClientWindow.fxml
@@ -19,6 +19,7 @@
             <PasswordField fx:id="password" promptText="Password" />
             <Button mnemonicParsing="false" onAction="#SignIn" text="Sign In" />
             <Button mnemonicParsing="false" onAction="#SignUp" text="Sign Up" />
+            <Button mnemonicParsing="false" onAction="#logout" text="Logout" />
             <Label fx:id="LoginStatus" />
          </children>
          <padding>
@@ -41,6 +42,6 @@
       <TextArea fx:id="SendMessageText" layoutX="208.0" layoutY="204.0" prefHeight="126.0" prefWidth="384.0" promptText="Send a Message" />
       <TextField fx:id="SendTo" layoutX="208.0" layoutY="339.0" prefHeight="26.0" prefWidth="295.0" promptText="Receipient" />
       <Button layoutX="515.0" layoutY="339.0" mnemonicParsing="false" onAction="#SendMessage" text="Send" />
-      <Label fx:id="MessageSent" layoutX="213.0" layoutY="369.0" prefHeight="26.0" prefWidth="93.0" />
+      <Label fx:id="MessageSent" layoutX="213.0" layoutY="369.0" prefHeight="26.0" prefWidth="251.0" />
    </children>
 </AnchorPane>
